cabal-version:      3.0
name:               perf-test
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Andrzej Rybczak
maintainer:         andrzej@rybczak.net
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable perf-test
    import:           warnings
    -- other-modules:
    -- other-extensions:
    build-depends:    base <5
                    , optics-core
                    , tasty-bench
    main-is: MyLib.hs
    hs-source-dirs:   src
    default-language: Haskell2010
